Colaboratory를 통해 생성됨

--- a/otto.ipynb
+++ b/otto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUIcFp/EDojX6p9SQCThM9",
+      "authorship_tag": "ABX9TyO3570JogEN1VbvmVZeipK9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "_Rz7XEIdfepS"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "TJcHo4NmfufX"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -283,10 +283,175 @@
         "test.head()"
       ],
       "metadata": {
-        "id": "K46kJceHf8uw"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 231
+        },
+        "id": "K46kJceHf8uw",
+        "outputId": "5a034e4e-47a0-4758-c129-26ab88db5e2e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "shape: (5, 4)\n",
+              "┌──────────┬─────────┬───────────────┬────────┐\n",
+              "│ session  ┆ aid     ┆ ts            ┆ type   │\n",
+              "│ ---      ┆ ---     ┆ ---           ┆ ---    │\n",
+              "│ i64      ┆ i64     ┆ i64           ┆ str    │\n",
+              "╞══════════╪═════════╪═══════════════╪════════╡\n",
+              "│ 12899779 ┆ 59625   ┆ 1661724000278 ┆ clicks │\n",
+              "│ 12899780 ┆ 1142000 ┆ 1661724000378 ┆ clicks │\n",
+              "│ 12899780 ┆ 582732  ┆ 1661724058352 ┆ clicks │\n",
+              "│ 12899780 ┆ 973453  ┆ 1661724109199 ┆ clicks │\n",
+              "│ 12899780 ┆ 736515  ┆ 1661724136868 ┆ clicks │\n",
+              "└──────────┴─────────┴───────────────┴────────┘"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        white-space: pre;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        padding-top: 0;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        padding-bottom: 0;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        line-height: 95%;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "<small>shape: (5, 4)</small>\n",
+              "<thead>\n",
+              "<tr>\n",
+              "<th>\n",
+              "session\n",
+              "</th>\n",
+              "<th>\n",
+              "aid\n",
+              "</th>\n",
+              "<th>\n",
+              "ts\n",
+              "</th>\n",
+              "<th>\n",
+              "type\n",
+              "</th>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "i64\n",
+              "</td>\n",
+              "<td>\n",
+              "i64\n",
+              "</td>\n",
+              "<td>\n",
+              "i64\n",
+              "</td>\n",
+              "<td>\n",
+              "str\n",
+              "</td>\n",
+              "</tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr>\n",
+              "<td>\n",
+              "12899779\n",
+              "</td>\n",
+              "<td>\n",
+              "59625\n",
+              "</td>\n",
+              "<td>\n",
+              "1661724000278\n",
+              "</td>\n",
+              "<td>\n",
+              "&quot;clicks&quot;\n",
+              "</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "12899780\n",
+              "</td>\n",
+              "<td>\n",
+              "1142000\n",
+              "</td>\n",
+              "<td>\n",
+              "1661724000378\n",
+              "</td>\n",
+              "<td>\n",
+              "&quot;clicks&quot;\n",
+              "</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "12899780\n",
+              "</td>\n",
+              "<td>\n",
+              "582732\n",
+              "</td>\n",
+              "<td>\n",
+              "1661724058352\n",
+              "</td>\n",
+              "<td>\n",
+              "&quot;clicks&quot;\n",
+              "</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "12899780\n",
+              "</td>\n",
+              "<td>\n",
+              "973453\n",
+              "</td>\n",
+              "<td>\n",
+              "1661724109199\n",
+              "</td>\n",
+              "<td>\n",
+              "&quot;clicks&quot;\n",
+              "</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "12899780\n",
+              "</td>\n",
+              "<td>\n",
+              "736515\n",
+              "</td>\n",
+              "<td>\n",
+              "1661724136868\n",
+              "</td>\n",
+              "<td>\n",
+              "&quot;clicks&quot;\n",
+              "</td>\n",
+              "</tr>\n",
+              "</tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -546,51 +711,6 @@
           },
           "metadata": {},
           "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "slice_size = 1_000_000\n",
-        "df = pl.concat(\n",
-        "    [\n",
-        "        pl.read_json(\n",
-        "            StringIO(\"\".join(train_1[offset: (offset + slice_size)])),\n",
-        "            json_lines=True,\n",
-        "        )\n",
-        "        for offset in range(0, len(train_1), slice_size)\n",
-        "    ]\n",
-        ")\n",
-        "#converting struct of events in 3 columns(aid,ts,type) \n",
-        "train_1=df.explode('events').unnest('events')\n",
-        "# event 쪼개주기"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 400
-        },
-        "id": "Z-WTA9RPhZLQ",
-        "outputId": "801d135d-f430-45ef-b4d1-7f3f04ce538c"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "PanicException",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mPanicException\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-8bec4d0d3bc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mslice_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1_000_000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m df = pl.concat(\n\u001b[0;32m----> 3\u001b[0;31m     [\n\u001b[0m\u001b[1;32m      4\u001b[0m         pl.read_json(\n\u001b[1;32m      5\u001b[0m             \u001b[0mStringIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moffset\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mslice_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-20-8bec4d0d3bc0>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m df = pl.concat(\n\u001b[1;32m      3\u001b[0m     [\n\u001b[0;32m----> 4\u001b[0;31m         pl.read_json(\n\u001b[0m\u001b[1;32m      5\u001b[0m             \u001b[0mStringIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moffset\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mslice_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0mjson_lines\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/polars/utils.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    335\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m             \u001b[0m_rename_kwargs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maliases\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 337\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/polars/io.py\u001b[0m in \u001b[0;36mread_json\u001b[0;34m(file, json_lines)\u001b[0m\n\u001b[1;32m   1000\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1001\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mjson_lines\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1002\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mread_ndjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1003\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1004\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_read_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/polars/io.py\u001b[0m in \u001b[0;36mread_ndjson\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m   1015\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1016\u001b[0m     \"\"\"\n\u001b[0;32m-> 1017\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_read_ndjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1018\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1019\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/polars/internals/dataframe/frame.py\u001b[0m in \u001b[0;36m_read_ndjson\u001b[0;34m(cls, file)\u001b[0m\n\u001b[1;32m    830\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    831\u001b[0m         \u001b[0mself\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__new__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 832\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPyDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_ndjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    833\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    834\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mPanicException\u001b[0m: called `Result::unwrap()` on an `Err` value: ExternalFormat(\"InvalidToken(115)\")"
-          ]
         }
       ]
     }
