--- a/4.ipynb
+++ b/4.ipynb
@@ -308,9 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a =[]\n",
+    "b =[]\n",
     "for i in range (12899779,13099779):\n",
-    "    a.append(max(test[test['session'] == i]['ts']))\n",
+    "    b.append(max(test[test['session'] == i]['ts']))\n",
     "\n",
     "# 각 세션의 가장 큰 값의 ts를 a라는 리스트에 추출 "
    ]
@@ -392,7 +392,7 @@
    "source": [
     "sess1 = pd.DataFrame()\n",
     "sess1['session'] = pd.DataFrame(list(range(12899779, 13099779)))\n",
-    "sess1['ts'] = a\n",
+    "sess1['ts'] = b\n",
     "sess1.head()\n",
     "# 각 세션의 가장 큰 값 ts를 데이터 프레임으로 만들기"
    ]
@@ -491,7 +491,7 @@
     }
    ],
    "source": [
-    "test_sam = pd.merge(test_sam, sess, how = 'left', on = 'session')\n",
+    "test_sam = pd.merge(test_sam, sess1, how = 'left', on = 'session')\n",
     "test_sam.head()\n",
     "# 아까 만들어둔 test_sam 에 각 세션의 최대 ts 붙이기"
    ]
@@ -893,6 +893,19 @@
     "X_test_imputed = imp_mean.transform(X_test_encoded)\n",
     "\n",
     "y_pred = model_dt.predict(X_test_imputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = pd.DataFrame(y_pred)\n",
+    "sample['labels'] = c\n",
+    "sample['session_type'] = sample['session'].astype('str') + \"_\" + sample['type']\n",
+    "sample = sample.drop(['ts'], axis = 1)\n",
+    "sample.head()"
    ]
   },
   {
